Simciv indev R4.0 (work in progress) :

---

Simciv indev R3.1 (2012-09-30) :

+ Re-added death icon when houses inhabitants die
- Fixed game window positionning
- Fixed zone erasing not working

Simciv indev R3.0 (2012-09-29) :

+ The game can be saved and loaded (only 1 save file yet)
+ Builds can burn (display fire risks with key [5])
+ Added main menu
+ Added water sources
+ Added fire stations and firemen
+ Added time bar showing the current date (not realistic)
+ Added notification system on right side of the screen
+ Added report window when right-clicking on a building
+ Added crash window and log system
* New population and job systems
* Citizen can re-grow if there is room and food in houses
* Only houses and farmland can be repeated (by cursor drag)
* New pathfinding system

Simciv indev R2.01 (2012-08-25) :

+ Fixed early starves
+ Fixed resource distribution lags

Simciv indev R2.0 (2012-08-23) :

+ Added money counter (and building costs)
+ Added taxmen offices and taxmen
+ Added markets and delivery men
+ Added time progression (only for months)
+ Added bushes
+ Added citizen hunger (they slow down and finally die/quit the city)
+ Added builds maintenance, with architects
+ Added overlays (keys 0, 1, 2 and 3)
+ Added fast-forwarding (space key)
* Citizen are a bit faster
* The main window is now resizeable
* Improved minimap (builds colors and refresh rate)
- Fixed cursor shift bug
- Fixed too loud sounds (played at the same time as for houses)
- Fixed too large default window

Simciv indev R1.0 (2012-07-28) :
Initial release
